--- a/index.html
+++ b/index.html
@@ -1,27 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
+    <title>Bootstrap 4, from LayoutIt!</title>
 
+    <meta name="description" content="Source code generated using layoutit.com">
+    <meta name="author" content="LayoutIt!">
 
+    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="css/style.css" rel="stylesheet">
 
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz" crossorigin="anonymous">
-    <link rel="stylesheet" href="style.css">
-    <title>Passa Pungchai - General Representative</title>
-</head>
-<body>
+  </head>
+  <body>
+
+    <div class="container-fluid">
+	<div class="row">
+		<div class="col-md-12">
 
     <nav class="navbar navbar-expand-lg navbar-light bg-light sticky-top">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#">Passa Pungchai</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
+        <img src="banner.png" id="banner"></img>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
@@ -42,44 +43,75 @@
     </nav>
 
 
+<div class="jumbotron">
+				<h2>
+					Why I'm Running
+				</h2>
+				<p id="main" style="width: 50%">
+I was born and raised in the Central Valley, daughter of two Thai immigrants. I dreamt of being a scientist, and UCLA has allowed me to learn under the greatest minds with the best peers. However, UCLA must do better--- we have an obligation as a public university to uplift and educate our student body the best we can. When we go back, we have to work together to improve campus life for all. That’s why I’m running for USAC General Representative, but I need your help to do it. 
+				</p>
+          <img id="photo" src="passa.jpg"> </img>
+       
+			</div>
+		</div>
+	</div>
+	<div class="row">
+		<div class="col-md-6">
+		</div>
+		<div class="col-md-6">
+		</div>
+	</div>
+	<div class="row">
+		<div id="uplift" class="col-md-4">
+			<h2>
+				Uplifting Underserved Groups
+			</h2>
+			<p>Retention rates for BIPOC and marginalized students are worse across the board. We need to work to even the playing field by focusing on academic preparation programs and increasing access to academic enrichment opportunities such as undergraduate research. 
 
-    <div class="grid-2">
-        <div class="section-1">
-            <img src='passa.jpg' style='width:580px; heigh: auto'></img>
-            <h2>Passa Pungchai</h2>
-            <p><b>General Representative - Bruin Solutions</b></p>
-            <p style='padding:4rem; padding-bottom: 10px; padding-top:5px'>I’m a third year bioengineering student running for General Representative with Bruin Solutions. As a public university, we are obligated to ensure that every student has the same access to opportunity and success. My office will implement bold policy to uplift underserved students and improve campus life for all. </p>
-            <a href="#"><i class="fab fa-twitter"></i></a>
-            <a href="#"><i class="fab fa-reddit"></i></a>
-            <a href="#"><i class="fab fa-facebook"></i></a>
-        </div>
-        <div class="section-2">
-            <h2 id="majpoly"> Major Policies</h2>
-            <ul>
-              <li> <b>Compensate learning assistants and undergraduate researchers with</b> the USAC Surplus and/or federal work study so that students with less resources are not blocked out from these activities.  </li>
-              <li><b>Establish a summer bootcamp to prepare freshly admitted STEM students from underserved backgrounds to learn science fundamentals</b> they need to succeed in Year One and also form peer groups early on to improve retention. </li>
-              <li><b> Install menstrual product dispensers in ALL restrooms across campus.</b> </li>
-              <li><b>Improve coffee quality on campus</b> by analyzing and revising coffee brewing practices at on-campus eateries and cafes.  </li>
-              <li><b> Work with the Facilities Commission to install hand sanitizer dispensers</b> and pressure administration to refill existing dispensers more often. </li>
-              <li><b> Expand BruinCast capability</b> to every lecture hall on campus, and incentivize professors to stream lectures, so that course enrollment numbers are not limited by Fire Marshall regulations. </li>
-              <li><b>Expand the learning assistant program</b> further, so that discussion sections can accommodate more students. </li>
-            </ul>
+			</p>
+			<p>
+				<a class="btn" href="#">View details »</a>
+			</p>
+		</div>
+		<div id="health" class="col-md-4">
+			<h2>
+        Health and Sustainability
+			</h2>
+			<p>
+We're living in a pandemic, so public health is a priority especially as we go back. With thousands of students on campus, sanitation stations need to be everywhere and plentiful. Menstrual products should also be available in ALL restrooms across campus. 
+
+			</p>
+			<p>
+				<a class="btn" href="#">View details »</a>
+			</p>
+		</div>
+		<div id="enroll" class="col-md-4">
+			<h2>
+				Improving Enrollment
+			</h2>
+			<p>
+				Enrollment period is stressful for all undergrads, especially those in impacted courses. To solve this, we can accommodate more students in impacted courses by expanding BruinCast (so students don’t have to physically be in class) or expanding the learning assistant program. 
+
+			</p>
+			<p>
+				<a class="btn" href="#">View details »</a>
+			</p>
+		</div>
+	</div>
+</div>
 
 
-            <h2>Platform</h2>
-            <ul>
-              <li><h2> Uplifting Underserved Groups </h2>Retention rates for BIPOC and marginalized students are worse across the board. We need to work to even the playing field by focusing on academic preparation programs and increasing access to academic enrichment opportunities such as undergraduate research. </li>
-              <li><h2> Health and Sustainability </h2> We’re living in a pandemic, so public health is a priority especially as we go back. With thousands of students on campus, sanitation stations need to be everywhere and plentiful. Menstrual products should also be available in ALL restrooms across campus. </li>
-              <li><h2> Improving Enrollment </h2> Enrollment period is stressful for all undergrads, especially for impacted courses. To solve this, we can accommodate more students in impacted courses by expanding BruinCast (so students don’t have to physically be in class) or expanding the learning assistant program. </li>
-            </ul>
 
-            <h2>Qualifications</h2>
-            <ul>
-              <li><h2>Undergraduate Researcher at UCLA & Visiting Undergraduate Research Fellow at UCSF</h2> I’m an engineering student with extensive research experience at UCLA and other UCs, so I understand the value of academic enrichment and how they impact lives. I also understand the competitive funding landscape for undergrad projects. </li>
-              <li><h2>UCLAxUCSF Institute for Global Health Sciences COVID-19 Research Watch</h2> I have helped members of the public, clinicians, and scientists review and understand new COVID-19 information as it’s released. Thus, I’m able to effectively communicate public health ideas quickly and effectively for policy practice.   </li>
 
-            </ul>
-        </div>
+
+    <script src="js/jquery.min.js"></script>
+    <script src="js/bootstrap.min.js"></script>
+    <script src="js/scripts.js"></script>
+
+
+    <div class="footer">
+      <img id="stamp" src="stamp.png"> </img>
     </div>
-</body>
+
+  </body>
 </html>
